# dispatchxx

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic_usage.cpp  low_level_broker.cpp  resilience_demo.cpp
include/dispatchxx/: Broker.hpp  BrokerConfig.hpp  InMemoryBroker.hpp  Task.hpp  TaskQueueClient.hpp  TaskRegistry.hpp  WorkerPool.hpp
src/: InMemoryBroker.cpp  TaskQueueClient.cpp  TaskRegistry.cpp  WorkerPool.cpp
tests/: CMakeLists.txt  test_in_memory_broker.cpp  test_resilience.cpp  test_task_queue_client.cpp  test_task_registry.cpp  test_worker_pool.cpp
